ref #10991 Add name-related sources to print publication bibliography                                                                                                                    >>                                                                                                                      >> - collect relationship and type-designation sources for accepted names and synonyms                                  >> - add separate bibliography source categories                                                                        >> - include synonym concept references                                                                                 >> - refactor PrintPubDtoMapper for clearer source and DTO handling                                                     >> - avoid modifying Hibernate-managed link collections