@@ -6,13 +6,10 @@
  * The contents of this file are subject to the Mozilla Public License Version 1.1
  * See LICENSE.TXT at the top of this package for the full license terms.
  */
-
 package eu.etaxonomy.cdm.io.cdmprintpub.mapper;
 
 import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Iterator;
-import java.util.LinkedList;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -33,7 +30,6 @@ import eu.etaxonomy.cdm.io.cdmprintpub.dto.PrintPubSynonymGroupDTO;
 import eu.etaxonomy.cdm.io.cdmprintpub.dto.PrintPubTaxonSummaryDTO;
 import eu.etaxonomy.cdm.model.common.CdmBase;
 import eu.etaxonomy.cdm.model.common.IdentifiableSource;
-import eu.etaxonomy.cdm.model.common.Identifier;
 import eu.etaxonomy.cdm.model.common.Language;
 import eu.etaxonomy.cdm.model.description.CommonTaxonName;
 import eu.etaxonomy.cdm.model.description.DescriptionElementBase;
@@ -46,7 +42,6 @@ import eu.etaxonomy.cdm.model.media.ExternalLink;
 import eu.etaxonomy.cdm.model.name.HomotypicalGroup;
 import eu.etaxonomy.cdm.model.name.NomenclaturalSource;
 import eu.etaxonomy.cdm.model.name.NomenclaturalStatus;
-import eu.etaxonomy.cdm.model.name.Rank;
 import eu.etaxonomy.cdm.model.name.SpecimenTypeDesignation;
 import eu.etaxonomy.cdm.model.name.TaxonName;
 import eu.etaxonomy.cdm.model.name.TextualTypeDesignation;
@@ -63,13 +58,32 @@ import eu.etaxonomy.cdm.strategy.cache.TaggedText;
 import eu.etaxonomy.cdm.strategy.cache.TaggedTextFormatter;
 
 /**
- * Mapper class converting CDM domain objects into Print/Publication DTOs.
+ * Maps CDM domain objects to Print/Publication DTOs.
  *
- * Extracts names, types, synonyms, descriptions, and references based on export
- * configuration and registers shared references in the export state.
+ * <p>
+ * This mapper is responsible for:
+ * </p>
+ * <ul>
+ * <li>accepted-taxon mapping,</li>
+ * <li>synonym mapping,</li>
+ * <li>type rendering,</li>
+ * <li>factual-data extraction.</li>
+ * </ul>
+ *
+ * <p>
+ * Name-related bibliography collection is delegated to
+ * {@link PrintPubBibliographyCollector}.
+ * </p>
  */
 @Component
 public class PrintPubDtoMapper {
+
+    private final PrintPubBibliographyCollector bibliographyCollector;
+
+    public PrintPubDtoMapper(PrintPubBibliographyCollector bibliographyCollector) {
+
+        this.bibliographyCollector = bibliographyCollector;
+    }
 
     public PrintPubTaxonSummaryDTO mapNodeToDto(TaxonNode node, int referenceDepth, PrintPubExportState state) {
 
@@ -80,21 +94,18 @@ public class PrintPubDtoMapper {
         Taxon taxon = HibernateProxyHelper.deproxy(node.getTaxon());
 
         PrintPubTaxonSummaryDTO dto = new PrintPubTaxonSummaryDTO();
+
         dto.uuid = taxon.getUuid();
         dto.relativeDepth = calculateDepth(node) - referenceDepth;
 
         TaxonName name = HibernateProxyHelper.deproxy(taxon.getName());
 
-        if (name != null) {
-            dto.taggedNameList = name.getTaggedFullTitle();
-            dto.scientificName = TaggedTextFormatter.createString(name.getTaggedName());
-            dto.titleCache = name.getTitleCache();
-        } else {
-            dto.titleCache = taxon.getTitleCache();
-        }
+        mapAcceptedName(taxon, name, dto);
 
         if (name != null) {
             extractTypeData(name, dto, state.getConfig());
+
+            bibliographyCollector.collectAcceptedNameSources(state, name);
         }
 
         if (state.getConfig().isDoSynonyms()) {
@@ -105,59 +116,161 @@ public class PrintPubDtoMapper {
             extractDescriptionData(state, taxon, dto);
         }
 
-        if (state.getConfig().isIncludeTaxonomicConceptReference() && taxon.getSec() != null) {
+        extractTaxonSecReference(state, taxon, dto);
 
-            Reference ref = HibernateProxyHelper.deproxy(taxon.getSec());
-            SecundumSource secSource = taxon.getSecSource();
-
-            if (secSource != null && secSource.getType().isPrimarySource()) {
-
-                state.addReference(ref, PrintPubReferenceSourceType.TAXON_SEC);
-
-                dto.secReferenceCitation = OriginalSourceFormatter.INSTANCE_WITH_YEAR_BRACKETS.format(ref,
-                        secSource.getCitationMicroReference(), null, null);
-            }
-        }
-
-        extractIdentifiers(state, taxon, dto);
+        extractIdentifiers(taxon, dto);
 
         return dto;
+    }
+
+    private void mapAcceptedName(Taxon taxon, TaxonName name, PrintPubTaxonSummaryDTO dto) {
+
+        if (name != null) {
+            dto.taggedNameList = name.getTaggedFullTitle();
+
+            dto.scientificName = TaggedTextFormatter.createString(name.getTaggedName());
+
+            dto.titleCache = name.getTitleCache();
+        } else {
+            dto.titleCache = taxon.getTitleCache();
+        }
+    }
+
+    private void extractTaxonSecReference(PrintPubExportState state, Taxon taxon, PrintPubTaxonSummaryDTO dto) {
+
+        if (!state.getConfig().isIncludeTaxonomicConceptReference()) {
+            return;
+        }
+
+        if (taxon.getSec() == null) {
+            return;
+        }
+
+        Reference reference = HibernateProxyHelper.deproxy(taxon.getSec());
+
+        SecundumSource secSource = taxon.getSecSource();
+
+        if (secSource == null || secSource.getType() == null || !secSource.getType().isPrimarySource()) {
+            return;
+        }
+
+        state.addReference(reference, PrintPubReferenceSourceType.TAXON_SEC);
+
+        dto.secReferenceCitation = OriginalSourceFormatter.INSTANCE_WITH_YEAR_BRACKETS.format(reference,
+                secSource.getCitationMicroReference(), null, null);
     }
 
     private void extractSynonymGroups(PrintPubExportState state, Taxon taxon, PrintPubTaxonSummaryDTO dto) {
 
         HomotypicalGroup acceptedGroup = taxon.getHomotypicGroup();
+
         List<Synonym> homotypicSynonyms = taxon.getSynonymsInGroup(acceptedGroup);
 
-        filterMisapplied(homotypicSynonyms, state.getConfig().isIncludeMisappliedNames());
+        if (homotypicSynonyms != null && !homotypicSynonyms.isEmpty()) {
 
-        if (!homotypicSynonyms.isEmpty()) {
             PrintPubSynonymGroupDTO homotypicGroupDTO = new PrintPubSynonymGroupDTO();
+
             homotypicGroupDTO.isHomotypic = true;
-            for (Synonym syn : homotypicSynonyms) {
-                homotypicGroupDTO.synonyms.add(createSynonymDTO(state, syn));
+
+            for (Synonym synonym : homotypicSynonyms) {
+                PrintPubSynonymDTO synonymDTO = createSynonymDTO(state, synonym);
+
+                if (synonymDTO != null) {
+                    homotypicGroupDTO.synonyms.add(synonymDTO);
+                }
             }
-            dto.synonymGroups.add(homotypicGroupDTO);
+
+            dto.homotypicSynonymGroup = homotypicGroupDTO;
         }
 
-        List<HomotypicalGroup> heteroGroups = taxon.getHeterotypicSynonymyGroups();
-        for (HomotypicalGroup group : heteroGroups) {
+        List<HomotypicalGroup> heterotypicGroups = taxon.getHeterotypicSynonymyGroups();
+
+        if (heterotypicGroups == null) {
+            return;
+        }
+
+        for (HomotypicalGroup group : heterotypicGroups) {
+
             List<Synonym> groupSynonyms = taxon.getSynonymsInGroup(group);
 
-            filterMisapplied(groupSynonyms, state.getConfig().isIncludeMisappliedNames());
-
-            if (!groupSynonyms.isEmpty()) {
-                PrintPubSynonymGroupDTO heteroGroupDTO = new PrintPubSynonymGroupDTO();
-                heteroGroupDTO.isHomotypic = false;
-                for (Synonym syn : groupSynonyms) {
-                    heteroGroupDTO.synonyms.add(createSynonymDTO(state, syn));
-                }
-                dto.synonymGroups.add(heteroGroupDTO);
+            if (groupSynonyms == null || groupSynonyms.isEmpty()) {
+                continue;
             }
+
+            PrintPubSynonymGroupDTO heterotypicGroupDTO = new PrintPubSynonymGroupDTO();
+
+            heterotypicGroupDTO.isHomotypic = false;
+
+            for (Synonym synonym : groupSynonyms) {
+                PrintPubSynonymDTO synonymDTO = createSynonymDTO(state, synonym);
+
+                if (synonymDTO != null) {
+                    heterotypicGroupDTO.synonyms.add(synonymDTO);
+                }
+            }
+
+            dto.synonymGroups.add(heterotypicGroupDTO);
         }
     }
 
-    private void extractIdentifiers(PrintPubExportState state, Taxon taxon, PrintPubTaxonSummaryDTO dto) {
+    private PrintPubSynonymDTO createSynonymDTO(PrintPubExportState state, Synonym synonym) {
+
+        synonym = CdmBase.deproxy(synonym);
+
+        if (synonym == null) {
+            return null;
+        }
+
+        PrintPubSynonymDTO dto = new PrintPubSynonymDTO();
+
+        TaxonName name = HibernateProxyHelper.deproxy(synonym.getName());
+
+        if (name != null) {
+            dto.taggedNameList = name.getTaggedFullTitle();
+
+            dto.scientificName = TaggedTextFormatter.createString(name.getTaggedName());
+
+            dto.titleCache = name.getTitleCache();
+
+            dto.forceDashMarker = name.getStatus().stream().map(NomenclaturalStatus::getType)
+                    .filter(type -> type != null).anyMatch(type -> type.isInvalid());
+
+            bibliographyCollector.collectSynonymNameSources(state, name);
+
+            PrintPubTaxonSummaryDTO typeData = new PrintPubTaxonSummaryDTO();
+
+            extractTypeData(name, typeData, state.getConfig());
+
+            dto.typeSpecimenString = typeData.typeSpecimenString;
+
+            dto.typeStatementString = typeData.typeStatementString;
+        } else {
+            dto.titleCache = synonym.getTitleCache();
+        }
+
+        extractSynonymSecReference(state, synonym, dto);
+
+        return dto;
+    }
+
+    private void extractSynonymSecReference(PrintPubExportState state, Synonym synonym, PrintPubSynonymDTO dto) {
+
+        if (!state.getConfig().isIncludeSynonymConceptReference()) {
+            return;
+        }
+
+        if (synonym.getSec() == null) {
+            return;
+        }
+
+        Reference reference = HibernateProxyHelper.deproxy(synonym.getSec());
+
+        state.addReference(reference, PrintPubReferenceSourceType.SYNONYM_SEC);
+
+        dto.secReference = reference.getTitleCache();
+    }
+
+    private void extractIdentifiers(Taxon taxon, PrintPubTaxonSummaryDTO dto) {
 
         if (taxon == null) {
             return;
@@ -170,31 +283,38 @@ public class PrintPubDtoMapper {
         }
 
         addIdentifierStrings(dto.wfoIds, name.getIdentifierStrings(IdentifierType.IDENTIFIER_NAME_WFO()));
+
         addIdentifierStrings(dto.ipniIds, name.getIdentifierStrings(IdentifierType.IDENTIFIER_NAME_IPNI()));
 
-        Set<ExternalLink> allLinks = name.getLinks();
+        /*
+         * Do not add nomenclatural-source links directly to name.getLinks(). That
+         * collection may be Hibernate-managed and represents persistent domain state.
+         */
+        Set<ExternalLink> allLinks = new HashSet<>();
 
-        NomenclaturalSource nameSource = name.getNomenclaturalSource();
-
-        if (nameSource != null) {
-            Set<ExternalLink> nomenclaturalSourceLinks = nameSource.getLinks();
-            allLinks.addAll(nomenclaturalSourceLinks);
+        if (name.getLinks() != null) {
+            allLinks.addAll(name.getLinks());
         }
 
-        if (allLinks != null) {
-            for (ExternalLink link : allLinks) {
+        NomenclaturalSource nomenclaturalSource = name.getNomenclaturalSource();
 
-                link = HibernateProxyHelper.deproxy(link);
+        if (nomenclaturalSource != null && nomenclaturalSource.getLinks() != null) {
 
-                if (link == null || link.getUri() == null) {
-                    continue;
-                }
+            allLinks.addAll(nomenclaturalSource.getLinks());
+        }
 
-                String uri = link.getUri().toString();
+        for (ExternalLink externalLink : allLinks) {
 
-                if (uri != null && !uri.trim().isEmpty()) {
-                    dto.links.add(uri.trim());
-                }
+            ExternalLink link = HibernateProxyHelper.deproxy(externalLink);
+
+            if (link == null || link.getUri() == null) {
+                continue;
+            }
+
+            String uri = link.getUri().toString();
+
+            if (uri != null && !uri.isBlank()) {
+                dto.links.add(uri.trim());
             }
         }
     }
@@ -206,226 +326,288 @@ public class PrintPubDtoMapper {
         }
 
         for (String value : values) {
-            if (value != null && !value.trim().isEmpty()) {
+            if (value != null && !value.isBlank()) {
                 target.add(value.trim());
             }
         }
     }
 
-    private void filterMisapplied(List<Synonym> synonyms, boolean includeMisapplied) {
-        if (includeMisapplied) {
-            return;
-        }
-        synonyms.removeIf(syn -> syn.getType() == null);
-    }
-
-    private PrintPubSynonymDTO createSynonymDTO(PrintPubExportState state, Synonym syn) {
-
-        syn = CdmBase.deproxy(syn);
-        PrintPubSynonymDTO synDTO = new PrintPubSynonymDTO();
-
-        TaxonName synName = HibernateProxyHelper.deproxy(syn.getName());
-
-        if (synName != null) {
-            synDTO.taggedNameList = synName.getTaggedFullTitle();
-            synDTO.scientificName = TaggedTextFormatter.createString(synName.getTaggedName());
-            synDTO.titleCache = synName.getTitleCache();
-        } else {
-            synDTO.titleCache = syn.getTitleCache();
-        }
-
-        if (synName != null) {
-            synDTO.forceDashMarker = synName.getStatus().stream().map(NomenclaturalStatus::getType)
-                    .filter(statusType -> statusType != null).anyMatch(statusType -> statusType.isInvalid());
-        }
-
-        if (state.getConfig().isIncludeSynonymConceptReference() && syn.getSec() != null) {
-            Reference ref = HibernateProxyHelper.deproxy(syn.getSec());
-            state.addReference(ref, PrintPubReferenceSourceType.SYNONYM_SEC);
-            synDTO.secReference = ref.getTitleCache();
-        }
-
-        if (synName != null) {
-            PrintPubTaxonSummaryDTO tmp = new PrintPubTaxonSummaryDTO();
-            extractTypeData(synName, tmp, state.getConfig());
-            synDTO.typeSpecimenString = tmp.typeSpecimenString;
-            synDTO.typeStatementString = tmp.typeStatementString;
-        }
-
-        return synDTO;
-    }
-
     private void extractTypeData(TaxonName name, PrintPubTaxonSummaryDTO dto, PrintPubExportConfigurator config) {
 
-        Rank rank = name.getRank();
-        boolean isSupraspecific = (rank != null && rank.compareTo(Rank.SPECIES()) > 0);
+        if (name == null || dto == null || config == null) {
+            return;
+        }
+
+        boolean isSupraspecific = name.isSupraSpecific();
 
         if (isSupraspecific && !config.isIncludeSupraspecificTypes()) {
             return;
         }
+
         if (!isSupraspecific && !config.isIncludeSpeciesTypes()) {
             return;
         }
 
         Set<TypeDesignationBase> designations = name.getTypeDesignations();
+
+        if (designations == null || designations.isEmpty()) {
+            return;
+        }
+
         List<SpecimenTypeDesignation> specimenTypes = new ArrayList<>();
+
         List<TextualTypeDesignation> textualTypes = new ArrayList<>();
 
-        for (TypeDesignationBase<?> design : designations) {
-            if (design instanceof SpecimenTypeDesignation) {
-                specimenTypes.add((SpecimenTypeDesignation) design);
-            } else if (design instanceof TextualTypeDesignation) {
-                textualTypes.add((TextualTypeDesignation) design);
+        for (TypeDesignationBase<?> designation : designations) {
+
+            designation = CdmBase.deproxy(designation);
+
+            if (designation instanceof SpecimenTypeDesignation) {
+                specimenTypes.add((SpecimenTypeDesignation) designation);
+            } else if (designation instanceof TextualTypeDesignation) {
+                textualTypes.add((TextualTypeDesignation) designation);
             }
         }
 
         if (!specimenTypes.isEmpty()) {
             try {
                 TypeDesignationGroupContainer container = new TypeDesignationGroupContainer(specimenTypes, name, null);
+
                 List<TaggedText> types = new TypeDesignationGroupContainerFormatter().withStartingTypeLabel(true)
                         .toTaggedText(container);
-                String formattedTypesString = createTypeDesignationString(types);
 
-                if (isSupraspecific && config.isStartSupraspecificTypesOnNewLine()) {
-                    dto.typeSpecimenString = "\n" + formattedTypesString;
-                } else {
-                    dto.typeSpecimenString = formattedTypesString;
-                }
+                String formattedTypes = createTypeDesignationString(types);
 
-            } catch (Exception e) {
-                dto.typeSpecimenString = "Error retrieving type data: " + e.getMessage();
+                dto.typeSpecimenString = addOptionalTypeLineBreak(formattedTypes, isSupraspecific, config);
+
+            } catch (Exception exception) {
+                dto.typeSpecimenString = "Error retrieving type data: " + exception.getMessage();
             }
         }
 
         if (!textualTypes.isEmpty()) {
-            String statement = textualTypes.stream().map(t -> t.getPreferredText(Language.DEFAULT()))
-                    .collect(Collectors.joining("; "));
+            String statement = textualTypes.stream().map(type -> type.getPreferredText(Language.DEFAULT()))
+                    .filter(text -> text != null && !text.isBlank()).collect(Collectors.joining("; "));
 
-            if (isSupraspecific && config.isStartSupraspecificTypesOnNewLine()) {
-                dto.typeStatementString = "\n" + statement;
-            } else {
-                dto.typeStatementString = statement;
+            if (!statement.isBlank()) {
+                dto.typeStatementString = addOptionalTypeLineBreak(statement, isSupraspecific, config);
             }
         }
     }
 
-    private String createTypeDesignationString(List<TaggedText> list) {
+    private String addOptionalTypeLineBreak(String value, boolean isSupraspecific, PrintPubExportConfigurator config) {
+
+        if (value == null || value.isBlank()) {
+            return value;
+        }
+
+        if (isSupraspecific && config.isStartSupraspecificTypesOnNewLine()) {
+            return "\n" + value;
+        }
+
+        return value;
+    }
+
+    private String createTypeDesignationString(List<TaggedText> taggedText) {
+
+        if (taggedText == null || taggedText.isEmpty()) {
+            return null;
+        }
+
         HTMLTagRules rules = new HTMLTagRules();
+
         rules.addRule(TagEnum.name, "i");
-        String typeDesignations = TaggedTextFormatter.createString(list, rules);
-        return typeDesignations;
+
+        return TaggedTextFormatter.createString(taggedText, rules);
     }
 
     private void extractDescriptionData(PrintPubExportState state, Taxon taxon, PrintPubTaxonSummaryDTO dto) {
+
         int factSequence = 0;
 
-        for (TaxonDescription desc : taxon.getDescriptions()) {
+        for (TaxonDescription description : taxon.getDescriptions()) {
 
-            if (!state.getConfig().isIncludeUnpublishedFacts() && !desc.isPublish()) {
+            if (!state.getConfig().isIncludeUnpublishedFacts() && !description.isPublish()) {
                 continue;
             }
 
-            Set<IdentifiableSource> descSources = desc.getSources();
+            Set<IdentifiableSource> descriptionSources = description.getSources();
 
-            for (DescriptionElementBase element : desc.getElements()) {
+            for (DescriptionElementBase baseElement : description.getElements()) {
 
-                element = CdmBase.deproxy(element);
+                DescriptionElementBase element = CdmBase.deproxy(baseElement);
+
+                if (element == null) {
+                    continue;
+                }
+
                 Feature feature = element.getFeature();
 
-                // ---- Common names ----
                 if (Feature.COMMON_NAME().equals(feature) && element instanceof CommonTaxonName) {
 
-                    CommonTaxonName ctn = (CommonTaxonName) element;
-                    dto.commonNames.add(ctn.getName()
-                            + (ctn.getLanguage() != null ? " [" + ctn.getLanguage().getLabel() + "]" : ""));
+                    addCommonName(dto, (CommonTaxonName) element);
+
                     continue;
                 }
 
-                // ---- Distribution ----
                 if (Feature.DISTRIBUTION().equals(feature) && element instanceof Distribution) {
 
-                    Distribution d = (Distribution) element;
-                    if (d.getArea() != null) {
-                        dto.distributionString = (dto.distributionString == null) ? d.getArea().getLabel()
-                                : dto.distributionString + ", " + d.getArea().getLabel();
-                    }
+                    addDistribution(dto, (Distribution) element);
+
                     continue;
                 }
 
-                // ---- Text facts ----
-                if (element instanceof TextData) {
-
-                    String text = ((TextData) element).getText(Language.DEFAULT());
-                    if (text == null) {
-                        continue;
-                    }
-
-                    PrintPubFactDTO fact = new PrintPubFactDTO();
-
-                    if (feature != null) {
-                        fact.label = feature.getLabel();
-                        fact.featureUuid = feature.getUuid();
-                    } else {
-                        fact.label = "Fact";
-                        fact.featureUuid = null;
-                    }
-
-                    fact.text = text;
-                    fact.kind = PrintPubFactKind.TEXT_DATA;
-                    fact.sortIndex = element.getSortIndex();
-                    fact.elementId = element.getId();
-                    fact.sequence = factSequence++;
-
-                    for (DescriptionElementSource source : element.getSources()) {
-                        if (source.getCitation() != null && !source.getType().isPrimarySource()) {
-                            Reference ref = HibernateProxyHelper.deproxy(source.getCitation());
-                            state.addReference(ref, PrintPubReferenceSourceType.TAXON_FACT_SOURCE);
-                            String shortCit = OriginalSourceFormatter.INSTANCE_WITH_YEAR_BRACKETS.format(ref, null);
-                            fact.citations.add(shortCit);
-                        }
-                    }
-
-                    for (IdentifiableSource identifiableSource : descSources) {
-                        if (identifiableSource == null || identifiableSource.getCitation() == null
-                                || !identifiableSource.getType().isPrimarySource()) {
-                            continue;
-                        }
-
-                        Reference ref = HibernateProxyHelper.deproxy(identifiableSource.getCitation());
-
-                        // Add enum first, see PrintPubReferenceEntryDTO section.
-                        state.addReference(ref, PrintPubReferenceSourceType.FACT_DATASET_SOURCE);
-
-                        String shortCit = OriginalSourceFormatter.INSTANCE_WITH_YEAR_BRACKETS.format(ref, null);
-                        fact.citations.add(shortCit);
-                    }
-
-                    dto.facts.add(fact);
+                if (!(element instanceof TextData)) {
+                    continue;
                 }
+
+                String text = ((TextData) element).getText(Language.DEFAULT());
+
+                if (text == null) {
+                    continue;
+                }
+
+                PrintPubFactDTO fact = createTextFact(element, feature, text, factSequence++);
+
+                addElementCitations(state, element, fact);
+
+                addDatasetCitations(state, descriptionSources, fact);
+
+                dto.facts.add(fact);
             }
+        }
+    }
+
+    private void addCommonName(PrintPubTaxonSummaryDTO dto, CommonTaxonName commonName) {
+
+        String value = commonName.getName();
+
+        if (value == null || value.isBlank()) {
+            return;
+        }
+
+        if (commonName.getLanguage() != null) {
+            value += " [" + commonName.getLanguage().getLabel() + "]";
+        }
+
+        dto.commonNames.add(value);
+    }
+
+    private void addDistribution(PrintPubTaxonSummaryDTO dto, Distribution distribution) {
+
+        if (distribution.getArea() == null) {
+            return;
+        }
+
+        String area = distribution.getArea().getLabel();
+
+        if (area == null || area.isBlank()) {
+            return;
+        }
+
+        if (dto.distributionString == null || dto.distributionString.isBlank()) {
+
+            dto.distributionString = area;
+        } else {
+            dto.distributionString += ", " + area;
+        }
+    }
+
+    private PrintPubFactDTO createTextFact(DescriptionElementBase element, Feature feature, String text,
+            int sequence) {
+
+        PrintPubFactDTO fact = new PrintPubFactDTO();
+
+        if (feature != null) {
+            fact.label = feature.getLabel();
+
+            fact.featureUuid = feature.getUuid();
+        } else {
+            fact.label = "Fact";
+            fact.featureUuid = null;
+        }
+
+        fact.text = text;
+        fact.kind = PrintPubFactKind.TEXT_DATA;
+        fact.sortIndex = element.getSortIndex();
+        fact.elementId = element.getId();
+        fact.sequence = sequence;
+
+        return fact;
+    }
+
+    private void addElementCitations(PrintPubExportState state, DescriptionElementBase element,
+            PrintPubFactDTO fact) {
+
+        if (element.getSources() == null) {
+            return;
+        }
+
+        for (DescriptionElementSource source : element.getSources()) {
+
+            if (source == null || source.getCitation() == null || source.getType() == null
+                    || source.getType().isPrimarySource()) {
+                continue;
+            }
+
+            Reference reference = HibernateProxyHelper.deproxy(source.getCitation());
+
+            state.addReference(reference, PrintPubReferenceSourceType.TAXON_FACT_SOURCE);
+
+            fact.citations.add(OriginalSourceFormatter.INSTANCE_WITH_YEAR_BRACKETS.format(reference, null));
+        }
+    }
+
+    private void addDatasetCitations(PrintPubExportState state, Set<IdentifiableSource> descriptionSources,
+            PrintPubFactDTO fact) {
+
+        if (descriptionSources == null) {
+            return;
+        }
+
+        for (IdentifiableSource source : descriptionSources) {
+
+            if (source == null || source.getCitation() == null || source.getType() == null
+                    || !source.getType().isPrimarySource()) {
+                continue;
+            }
+
+            Reference reference = HibernateProxyHelper.deproxy(source.getCitation());
+
+            state.addReference(reference, PrintPubReferenceSourceType.FACT_DATASET_SOURCE);
+
+            fact.citations.add(OriginalSourceFormatter.INSTANCE_WITH_YEAR_BRACKETS.format(reference, null));
         }
     }
 
     public int calculateDepth(TaxonNode node) {
+
         String treeIndex = node.treeIndex();
 
         if (treeIndex != null && !treeIndex.isEmpty()) {
+
             String[] segments = treeIndex.split("#");
+
             int depth = 0;
+
             for (String segment : segments) {
                 if (!segment.isEmpty()) {
                     depth++;
                 }
             }
+
             return depth;
         }
 
         int depth = 1;
+
         TaxonNode parent = node.getParent();
+
         while (parent != null) {
             depth++;
             parent = parent.getParent();
         }
+
         return depth;
     }
 }
